# vviewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/lib/vengine/: CMakeLists.txt
src/lib/vengine/core/: Asset.cpp  Asset.hpp  AssetManager.hpp  Camera.cpp  Camera.hpp  Color.hpp  Cubemap.cpp  Cubemap.hpp  Engine.cpp  Engine.hpp  EnvironmentMap.cpp  EnvironmentMap.hpp  Image.hpp  ImageUtils.cpp  ImageUtils.hpp  Instances.cpp  Instances.hpp  Light.hpp  Lights.hpp  Material.cpp  Material.hpp  Materials.cpp  Materials.hpp  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneUtils.cpp  SceneUtils.hpp  StringUtils.cpp  StringUtils.hpp  Texture.hpp  (+1 more)
src/lib/vengine/core/io/: AssimpLoadModel.cpp  AssimpLoadModel.hpp  Export.cpp  Export.hpp  FileTypes.cpp  Import.cpp  Import.hpp  ImportTypes.hpp
src/lib/vengine/math/: AABB.cpp  AABB.hpp  BlueNoise.hpp  Constants.hpp  MathUtils.cpp  MathUtils.hpp  PMJSequences.hpp  Transform.cpp  Transform.hpp
src/lib/vengine/shaders/: 3dui.frag.glsl  3dui.vert.glsl  compile.bat  compile.sh  gbuffer.frag.glsl  genBRDFLUT.frag.glsl  lambertBase.frag.glsl  lambertForward.frag.glsl  lambertForwardOpaque.frag.glsl  lambertForwardTransparent.frag.glsl  lightCompositionDirectional.frag.glsl  lightCompositionIBL.frag.glsl  lightCompositionPoint.frag.glsl  pbrAdd.frag.glsl  pbrBase.frag.glsl  pbrForward.frag.glsl  pbrForwardOpaque.frag.glsl  pbrForwardTransparent.frag.glsl  standard.vert.glsl
src/lib/vengine/shaders/include/: bluenoise.glsl  bluenoise_defines.glsl  constants.glsl  frame.glsl  lighting.glsl  packing.glsl  phaseFunctions.glsl  rayquery_occluded.glsl  rng.glsl  rng_pmj.glsl  rng_pmj_defines.glsl  sampling.glsl  structs.glsl  tonemapping.glsl  utils.glsl
src/lib/vengine/shaders/overlay/: AABB3.frag.glsl  AABB3.geom.glsl  AABB3.vert.glsl  outline.frag.glsl  outline.vert.glsl  transform3D.frag.glsl  transform3D.vert.glsl
src/lib/vengine/shaders/post/: empty.frag.glsl  highlight.frag.glsl  output.frag.glsl
src/lib/vengine/shaders/pt/: construct_frame.glsl  defines_pt.glsl  lightSampling.glsl  next_event_estimation.glsl  process_hit.glsl  process_volume_hit.glsl  process_volume_transmittance.glsl  rayNEE.rahit.glsl  rayNEE.rchit.glsl  rayNEE.rmiss.glsl  rayPrimary.rahit.glsl  rayPrimary.rmiss.glsl  rayPrimaryLambert.rchit.glsl  rayPrimaryPBRStandard.rchit.glsl  raySecondary.rahit.glsl  raySecondary.rchit.glsl  raySecondary.rmiss.glsl  rayahitNEE.rahit.glsl  rayahitNEEVolume.rahit.glsl  rayahitPrimary.rahit.glsl  rayahitSecondary.rahit.glsl  rayahitSecondaryVolume.rahit.glsl  raychitLambert.rchit.glsl  raychitPBRStandard.rchit.glsl  raychitVolume.rchit.glsl  raygen.rgen.glsl  raymissNEE.rmiss.glsl  raymissPrimary.rmiss.glsl  raymissSecondary.rmiss.glsl  structs_pt.glsl  (+1 more)
src/lib/vengine/utils/: Algorithms.hpp  ECS.cpp  ECS.hpp  FreeList.cpp  FreeList.hpp  Hash.hpp  IDGeneration.cpp  IDGeneration.hpp  ImageUtils.hpp  InternCache.hpp  Pool.hpp  Stack.hpp  Tasks.hpp  ThreadPool.cpp  ThreadPool.hpp  Tree.hpp
src/lib/vengine/vulkan/: VulkanContext.cpp  VulkanContext.hpp  VulkanEngine.cpp  VulkanEngine.hpp  VulkanFrameBuffer.cpp  VulkanFramebuffer.hpp  VulkanInstances.cpp  VulkanInstances.hpp  VulkanQueues.cpp  VulkanQueues.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanScene.cpp  VulkanScene.hpp  VulkanSceneObject.cpp  VulkanSceneObject.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
(+164 files in other folders)
